# accelbyte-python-sdk

./: .gitignore  .pylintrc  CHANGELOG.md  Jenkinsfile  Jenkinsfile.coverity  Jenkinsfile.generate  Jenkinsfile.github  Jenkinsfile.nightly  Jenkinsfile.nightly-starter  Makefile  README.md  async_demo.py  codegen.txt  demo.py  lobby_test.py  requirements-sample.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py
accelbyte_py_sdk/: __init__.py  __main__.py
docs/: achievement-index.md  amalgam_game_telemetry-index.md  basic-index.md  cloudsave-index.md  common_use_cases.md  custom_operation.md  dslogmanager-index.md  dsm_controller-index.md  dsmc-index.md  eventlog-index.md  gametelemetry-index.md  gdpr-index.md  getting_started.md  group-index.md  iam-index.md  leaderboard-index.md  legal-index.md  lobby-index.md  matchmaking-index.md  platform-index.md  qosm-index.md  seasonpass-index.md  session_browser-index.md  sessionbrowser-index.md  social-index.md  ugc-index.md
sample_app/: __main__.py  _add_client_permissions.py  _add_role_managers.py  _add_role_members.py  _add_user_ban.py  _add_user_permissions.py  _add_user_role.py  _create_client.py  _create_role.py  _create_role_permission.py  _create_stat.py  _delete_client.py  _delete_client_permission.py  _delete_role.py  _delete_role_as_admin.py  _delete_role_managers.py  _delete_role_members.py  _delete_role_permission.py  _delete_role_permissions.py  _delete_stat.py  _delete_user.py  _delete_user_permission.py  _delete_user_permissions.py  _delete_user_role.py  _delete_user_roles.py  (+39 more)
(+13186 files in other folders)
