[metadata]
name = accelbyte-py-sdk
version = 0.2.1
author = AccelByte
author_email = dev@accelbyte.net
description = AccelByte Python SDK
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = .
exclude =
    justice_py_sdk_codegen
